--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
 
     defaultConfig {
         applicationId "de.rgb_control"
-        minSdkVersion 25
+        minSdkVersion 27
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -32,7 +32,9 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation "com.github.duanhong169:colorpicker:1.1.6"
+    implementation 'petrov.kristiyan:colorpicker-library:1.1.10'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.airbnb.android:lottie:3.4.2'
     testImplementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
