--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,9 +34,11 @@ dependencies {
     implementation "com.github.duanhong169:colorpicker:1.1.6"
     implementation 'petrov.kristiyan:colorpicker-library:1.1.10'
     implementation 'androidx.preference:preference:1.1.1'
-    implementation 'com.airbnb.android:lottie:3.5.0'
+    implementation 'com.airbnb.android:lottie:3.6.0'
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
+
 
 }
